Cambio en la url al desplegar el servidor
Se quedó el nombre residual del proyecto que se hizo previamente a la formalización de la estructura del proyecto.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Practica3_local</name>
+	<name>GM1_i02abhak_P3</name>
 	<comment></comment>
 	<projects>
 	</projects>
