--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-<env-entry> 
-    <env-entry-name>url</env-entry-name>
-    <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>jdbc:mysql://oraclepr.uco.es:3306/i82carot</env-entry-value> 
-</env-entry>
-<env-entry> 
-    <env-entry-name>password</env-entry-name>
-    <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>i82carot</env-entry-value> 
-</env-entry>
-<env-entry> 
-    <env-entry-name>user</env-entry-name>
-    <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>i82carot</env-entry-value> 
-</env-entry>
- <context-param>
-    <param-name>sqlproperties</param-name>
-    <param-value>/WEB-INF/sql.properties</param-value>
- </context-param>
- </web-app>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+
+	<!-- Nombre amigable para la aplicación -->
+	<display-name>Mi Aplicación Practica 3</display-name>
+
+	<env-entry>
+		<env-entry-name>url</env-entry-name>
+		<env-entry-type>java.lang.String</env-entry-type>
+		<env-entry-value>jdbc:mysql://oraclepr.uco.es:3306/i82carot</env-entry-value>
+	</env-entry>
+	<env-entry>
+		<env-entry-name>password</env-entry-name>
+		<env-entry-type>java.lang.String</env-entry-type>
+		<env-entry-value>i82carot</env-entry-value>
+	</env-entry>
+	<env-entry>
+		<env-entry-name>user</env-entry-name>
+		<env-entry-type>java.lang.String</env-entry-type>
+		<env-entry-value>i82carot</env-entry-value>
+	</env-entry>
+	<context-param>
+		<param-name>sqlproperties</param-name>
+		<param-value>/WEB-INF/sql.properties</param-value>
+	</context-param>
+
+	<!-- Archivo de bienvenida -->
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+</web-app>
