Primeras adiciones del login
Realizando ejercicio 1 se ha añadido el login pero aun no está pulido del todo

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -2,6 +2,12 @@
 # Consultar la existencia de un jugador en la BD usando el correo
 consultaExistenciaPorCorreo=SELECT cuentaActiva FROM Jugador WHERE correo = ?
 
+calcularReservasCompletadas=SELECT COUNT(*) AS numeroReservasCompletadas FROM Reserva WHERE idJugador = ? AND fechaHora <= NOW()
+
+autenticarJugador=SELECT * FROM Jugador WHERE correo = ? AND contrasena = ?
+
+listarJugadoresConReservas=SELECT j.idJugador, j.nombreApellidos, j.fechaInscripcion, COUNT(r.idReserva) AS numeroReservasCompletadas FROM Jugador j LEFT JOIN Reserva r ON j.idJugador = r.idJugador WHERE j.cuentaActiva = 1 GROUP BY j.idJugador
+
 #Consulta para buscar un jugador por ID
 buscarJugadorPorId=SELECT idJugador, nombreApellidos, fechaNacimiento, fechaInscripcion, correo, cuentaActiva FROM Jugador WHERE idJugador = ?
 
@@ -14,7 +20,7 @@ buscarJugadorInscritoPorCorreo=SELECT idJugador, nombreApellidos, fechaNacimient
 reactivarCuenta=UPDATE Jugador SET nombreApellidos = ?, fechaNacimiento = ?, fechaInscripcion = ?, cuentaActiva = 1 WHERE correo = ?
 
 # Insertar un jugador en la BD
-altaJugador=INSERT INTO Jugador (nombreApellidos, fechaNacimiento, fechaInscripcion, correo, cuentaActiva) VALUES (?, ?, ?, ?, ?)
+altaJugador=INSERT INTO Jugador (nombreApellidos, fechaNacimiento, fechaInscripcion, correo, cuentaActiva, contrasena) VALUES (?, ?, ?, ?, ?, ?)
 
 # Desactivar la cuenta de un jugador
 desactivarCuenta=UPDATE Jugador SET cuentaActiva = 0 WHERE correo = ?
@@ -24,6 +30,8 @@ verificarCorreo=SELECT idJugador FROM Jugador WHERE correo = ? AND correo != ?
 
 # Actualizar la información de un jugador
 actualizarInfo=UPDATE Jugador SET nombreApellidos = ?, fechaNacimiento = ?, correo = ? WHERE correo = ?
+
+actualizarInfoSinCorreo=UPDATE Jugador SET nombreApellidos = ?, fechaNacimiento = ? WHERE correo = ?
 
 # Listar jugadores activos
 listarJugadoresActivos=SELECT * FROM Jugador WHERE cuentaActiva = 1
