Ejercicio 1 casi completado
Falta revisar lo que no esté hecho del login, register y funciones básicas del home de cada usuario y pulirlo + testearlo.

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -2,8 +2,6 @@
 # Consultar la existencia de un jugador en la BD usando el correo
 consultaExistenciaPorCorreo=SELECT cuentaActiva FROM Jugador WHERE correo = ?
 
-calcularReservasCompletadas=SELECT COUNT(*) AS numeroReservasCompletadas FROM Reserva WHERE idJugador = ? AND fechaHora <= NOW()
-
 autenticarJugador=SELECT * FROM Jugador WHERE correo = ? AND contrasena = ?
 
 listarJugadoresConReservas=SELECT j.idJugador, j.nombreApellidos, j.fechaInscripcion, COUNT(r.idReserva) AS numeroReservasCompletadas FROM Jugador j LEFT JOIN Reserva r ON j.idJugador = r.idJugador WHERE j.cuentaActiva = 1 GROUP BY j.idJugador
@@ -31,7 +29,7 @@ verificarCorreo=SELECT idJugador FROM Jugador WHERE correo = ? AND correo != ?
 # Actualizar la información de un jugador
 actualizarInfo=UPDATE Jugador SET nombreApellidos = ?, fechaNacimiento = ?, correo = ? WHERE correo = ?
 
-actualizarInfoSinCorreo=UPDATE Jugador SET nombreApellidos = ?, fechaNacimiento = ? WHERE correo = ?
+actualizarInfoJugador=UPDATE Jugador SET nombreApellidos = ?, contrasena = ? WHERE correo = ?
 
 # Listar jugadores activos
 listarJugadoresActivos=SELECT * FROM Jugador WHERE cuentaActiva = 1
@@ -151,6 +149,12 @@ buscarReservaPorId=SELECT idReserva, idJugador, fechaHora, duracionMin, idPista 
 
 #Consulta para buscar reserva por id y por idbono
 encontrarReservaPorIdBono=SELECT * FROM Reserva WHERE idJugador = ? AND idBono = ?
+
+#Consulta para obtener la proxima reserva de un cliente
+obtenerProximaReserva=SELECT MIN(fechaHora) AS proximaReserva FROM Reserva WHERE idJugador = (SELECT idJugador FROM Jugador WHERE correo = ?) AND fechaHora > NOW()
+
+calcularReservasCompletadas=SELECT COUNT(*) AS numeroReservasCompletadas FROM Reserva WHERE idJugador = ? AND fechaHora <= NOW()
+
 
 
 
