Consultar reservas casi hecho
Falta contemplar que se muestren todos los parámetros de reserva, incluido parametros de bono si tiene y demás

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -155,8 +155,7 @@ obtenerProximaReserva=SELECT MIN(fechaHora) AS proximaReserva FROM Reserva WHERE
 
 calcularReservasCompletadas=SELECT COUNT(*) AS numeroReservasCompletadas FROM Reserva WHERE idJugador = ? AND fechaHora <= NOW()
 
-consultarReservasPorCorreoYFechas = SELECT * FROM Reserva r INNER JOIN Jugador j ON r.idJugador = j.idJugador WHERE j.correo = ? AND r.fechaHora BETWEEN ? AND ?
-
+consultarReservasPorCorreoYFechas = SELECT r.*, b.numeroSesion FROM Reserva r INNER JOIN Jugador j ON r.idJugador = j.idJugador LEFT JOIN Bono b ON r.idBono = b.idBono WHERE j.correo = ? AND r.fechaHora BETWEEN ? AND ?
 
 
 
