--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,25 @@
 	</context-param>
 	
 	<filter>
+    <filter-name>EncodingFilter</filter-name>
+    <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+    <init-param>
+        <param-name>encoding</param-name>
+        <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+        <param-name>ignore</param-name>
+        <param-value>false</param-value>
+    </init-param>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>EncodingFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	
+	<filter>
     <filter-name>AccessControlFilter</filter-name>
     <filter-class>es.uco.pw.servlet.filters.AccessControlFilter</filter-class>
 	</filter>
