Cambios en la retroalimentacion de la p2
He modificado el jugadoresDAO y pistasDAO para que no hagan ninguna consulta en las funciones y haga la llamada al sql.properties

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -70,6 +70,16 @@ listarPistas=SELECT * FROM Pistas;
 # Buscar pista por id especifico
 buscarPistaPorId=SELECT * FROM Pista WHERE idPista = ?
 
+# Obtener el estado de la pista
+obtenerEstadoMaterial=SELECT idMaterial, tipo, usoExterior, estado FROM Material WHERE idMaterial = ?
+
+# Actualizar el estado a RESERVADO
+actualizarEstadoMaterial=UPDATE Material SET estado = 'RESERVADO' WHERE idMaterial = ?
+
+# Verificar que el material no este asociado a otra pista
+verificarMaterialesAsociados=SELECT tipo, COUNT(*) AS cantidad FROM Material WHERE idPista = ? GROUP BY tipo
+
+
 
 
 
@@ -156,6 +166,3 @@ obtenerProximaReserva=SELECT MIN(fechaHora) AS proximaReserva FROM Reserva WHERE
 calcularReservasCompletadas=SELECT COUNT(*) AS numeroReservasCompletadas FROM Reserva WHERE idJugador = ? AND fechaHora <= NOW()
 
 consultarReservasPorCorreoYFechas = SELECT r.*, b.numeroSesion FROM Reserva r INNER JOIN Jugador j ON r.idJugador = j.idJugador LEFT JOIN Bono b ON r.idBono = b.idBono WHERE j.correo = ? AND r.fechaHora BETWEEN ? AND ?
-
-
-
