Dar alta material completado
Funcionalidad para dar alta a un material desde el menú de admin lista.

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -85,6 +85,10 @@ actualizarEstadoMaterial=UPDATE Material SET estado = 'RESERVADO' WHERE idMateri
 # Verificar que el material no este asociado a otra pista
 verificarMaterialesAsociados=SELECT tipo, COUNT(*) AS cantidad FROM Material WHERE idPista = ? GROUP BY tipo
 
+# Obtener todos los materiales
+obtenerTodosLosMateriales=SELECT idMaterial, tipo, usoExterior, estado FROM Material
+
+
 
 
 
