--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -93,6 +93,7 @@ obtenerTodosLosMateriales=SELECT idMaterial, tipo, usoExterior, estado FROM Mate
 
 
 
+
 # Parte de consultas SQL para RESERVAS
 # Consulta para eliminar una reserva específica infantil
 eliminarReservaInfantil=DELETE FROM ReservaInfantil WHERE idReserva = ?
@@ -172,6 +173,9 @@ encontrarReservaPorIdBono=SELECT * FROM Reserva WHERE idJugador = ? AND idBono =
 
 #Consulta para obtener la proxima reserva de un cliente
 obtenerProximaReserva=SELECT MIN(fechaHora) AS proximaReserva FROM Reserva WHERE idJugador = (SELECT idJugador FROM Jugador WHERE correo = ?) AND fechaHora > NOW()
+
+# Consultar reservas por correo
+consultarReservasPorCorreo = SELECT r.*, b.numeroSesion FROM Reserva r INNER JOIN Jugador j ON r.idJugador = j.idJugador LEFT JOIN Bono b ON r.idBono = b.idBono WHERE j.correo = ?
 
 calcularReservasCompletadas=SELECT COUNT(*) AS numeroReservasCompletadas FROM Reserva WHERE idJugador = ? AND fechaHora <= NOW()
 
