Reservas con bono incompleto
Se ha creado el Servlet de RealizarReservaBonoServlet ademas de las vistas reservaBono.jsp y crearBono.jsp aunque hay un fallo a la hora de recuperar si el jugador tiene bono o no (con todos los usuarios pone que no tiene bono)
El boton de crear bono no redirige a la vista crearBono.jsp

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -163,7 +163,7 @@ consultarReservasFuturas=SELECT r.idReserva, r.idJugador, r.idPista, r.fechaHora
 consultarReservasPorRangoDeFechasYPista=SELECT r.*, b.numeroSesion FROM Reserva r LEFT JOIN Bono b ON r.idBono = b.idBono WHERE r.fechaHora BETWEEN ? AND ? AND r.idPista = ?
 
 #Consulta para obtener un bono asociado a un jugador
-obtenerBonoPorJugador=SELECT idBono, numeroSesion, fechaCaducidad FROM Bono WHERE idJugador = ? ORDER BY fechaCaducidad DESC LIMIT 1
+obtenerBonoPorJugador=SELECT idBono, numeroSesion, fechaCaducidad FROM Bono WHERE idJugador = ? AND fechaCaducidad > NOW() AND numeroSesion < 5 ORDER BY fechaCaducidad DESC LIMIT 1
 
 #Consulta para buscar reserva por id
 buscarReservaPorId=SELECT idReserva, idJugador, fechaHora, duracionMin, idPista FROM Reserva WHERE idReserva = ?
