--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -88,6 +88,10 @@ verificarMaterialesAsociados=SELECT tipo, COUNT(*) AS cantidad FROM Material WHE
 # Obtener todos los materiales
 obtenerTodosLosMateriales=SELECT idMaterial, tipo, usoExterior, estado FROM Material
 
+# Modificar estado materiales y pistas
+modificarEstadoMaterial=UPDATE Material SET estado = ? WHERE idMaterial = ?
+modificarEstadoPista=UPDATE Pista SET disponible = ? WHERE idPista = ?
+
 
 
 
