Listar Pistas funciona
- El listarPistas no funcionaba porque en el sql.properties, la consulta listarPistas hacia un SELECT * FROM Pistas, cuando dicha tabla en nuestra base de datos se llama 'Pista'.
- He creado también el listarPistas.css y añadido un botón de vuelta a inicio encima de la tabla de pistas

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -71,7 +71,7 @@ buscarPistasDisponiblesFiltrado=SELECT idPista, nombre, disponible, exterior, ta
 buscarPistasPorTipoYFecha=SELECT p.idPista, p.nombre, p.disponible, p.exterior, p.tamanoPista, p.maxJugadores FROM Pista p WHERE p.disponible = TRUE AND (p.tamanoPista = ? OR ? IS NULL) AND (p.exterior = ? OR ? IS NULL) AND NOT EXISTS (SELECT 1 FROM Reserva r    WHERE r.idPista = p.idPista  AND DATE(r.fechaHora) = ?)
 
 # Listar todas las pistas con sus detalles.
-listarPistas=SELECT * FROM Pistas;
+listarPistas=SELECT * FROM Pista;
 
 # Buscar pista por id especifico
 buscarPistaPorId=SELECT * FROM Pista WHERE idPista = ?
