--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -68,7 +68,7 @@ buscarPistasDisponibles=SELECT idPista, nombre, disponible, exterior, tamanoPist
 buscarPistasDisponiblesFiltrado=SELECT idPista, nombre, disponible, exterior, tamanoPista, maxJugadores FROM Pista WHERE disponible = TRUE AND tamanoPista = ? AND exterior = ?
 
 # Buscar pistas segun exterior y fecha
-buscarPistasPorTipoYFecha=SELECT p.idPista, p.nombre, p.disponible, p.exterior, p.tamanoPista, p.maxJugadores FROM Pista p WHERE p.disponible = TRUE AND (p.tamanoPista = ? OR ? IS NULL) AND (p.exterior = ? OR ? IS NULL) AND NOT EXISTS (SELECT 1 FROM Reserva r    WHERE r.idPista = p.idPista  AND DATE(r.fechaHora) = ?)
+buscarPistasPorTipoYFecha=SELECT DISTINCT p.idPista, p.nombre, p.disponible, p.exterior, p.tamanoPista, p.maxJugadores FROM Pista p WHERE p.disponible = 1 AND (p.tamanoPista = ? OR ? IS NULL) AND (p.exterior = ? OR ? IS NULL) AND NOT EXISTS (SELECT 1 FROM Reserva r WHERE r.idPista = p.idPista AND (TIMESTAMP(r.fechaHora) < TIMESTAMP(?) AND TIMESTAMP(DATE_ADD(r.fechaHora, INTERVAL ? MINUTE)) > TIMESTAMP(?)));
 
 # Listar todas las pistas con sus detalles.
 listarPistas=SELECT * FROM Pista;
@@ -92,8 +92,7 @@ obtenerTodosLosMateriales=SELECT idMaterial, tipo, usoExterior, estado FROM Mate
 modificarEstadoMaterial=UPDATE Material SET estado = ? WHERE idMaterial = ?
 modificarEstadoPista=UPDATE Pista SET disponible = ? WHERE idPista = ?
 
-
-
+listarPistasDisponiblesPorTipoYFecha=SELECT DISTINCT p.idPista, p.nombre, p.disponible, p.exterior, p.tamanoPista, p.maxJugadores FROM Pista p WHERE p.disponible = 1 AND (p.tamanoPista = ? OR ? IS NULL) AND NOT EXISTS (SELECT 1 FROM Reserva r WHERE r.idPista = p.idPista AND (TIMESTAMP(r.fechaHora) < TIMESTAMP(?) AND TIMESTAMP(DATE_ADD(r.fechaHora, INTERVAL ? MINUTE)) > TIMESTAMP(?)));
 
 
 
