Asociar material a pista funcional
Falta css y comprobar que el js de validacion funciona, además de controlar el manejo de errores

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -94,9 +94,7 @@ modificarEstadoPista=UPDATE Pista SET disponible = ? WHERE idPista = ?
 
 listarPistasDisponiblesPorTipoYFecha=SELECT DISTINCT p.idPista, p.nombre, p.disponible, p.exterior, p.tamanoPista, p.maxJugadores FROM Pista p WHERE p.disponible = 1 AND (p.tamanoPista = ? OR ? IS NULL) AND NOT EXISTS (SELECT 1 FROM Reserva r WHERE r.idPista = p.idPista AND (TIMESTAMP(r.fechaHora) < TIMESTAMP(?) AND TIMESTAMP(DATE_ADD(r.fechaHora, INTERVAL ? MINUTE)) > TIMESTAMP(?)));
 
-obtenerNombrePistaPorMaterial=SELECT Pista.nombre AS nombrePista FROM Material INNER JOIN Pista ON Material.idPista = Pista.idPista WHERE Material.idMaterial = ?
-
-obtenerIdPistaPorMaterial=SELECT idPista FROM Material WHERE idMaterial = ?
+obtenerMaterialesConPistas=SELECT Material.idMaterial, Material.tipo, Material.usoExterior, Material.estado, Pista.idPista, Pista.nombre AS nombrePista FROM Material LEFT JOIN Pista ON Material.idPista = Pista.idPista;
 
 
 # Parte de consultas SQL para RESERVAS
