Errores corregidos tras chequeo
- ahora el darAltaMaterial si creas un material ya existente te redirige bien a la pagina de error

- consulta de obtenerReservaPorIdBono corregida para que a la hora de mostrar la reserva de bono, muestra la ultima creada y no la primera

--- a/src/main/webapp/WEB-INF/sql.properties
+++ b/src/main/webapp/WEB-INF/sql.properties
@@ -172,7 +172,7 @@ obtenerBonoPorJugador=SELECT idBono, numeroSesion, fechaCaducidad FROM Bono WHER
 buscarReservaPorId=SELECT idReserva, idJugador, fechaHora, duracionMin, idPista FROM Reserva WHERE idReserva = ?
 
 #Consulta para buscar reserva por id y por idbono
-encontrarReservaPorIdBono=SELECT * FROM Reserva WHERE idJugador = ? AND idBono = ?
+encontrarReservaPorIdBono=SELECT * FROM Reserva WHERE idJugador = ? AND idBono = ? ORDER BY idReserva DESC LIMIT 1;
 
 #Consulta para obtener la proxima reserva de un cliente
 obtenerProximaReserva=SELECT MIN(fechaHora) AS proximaReserva FROM Reserva WHERE idJugador = (SELECT idJugador FROM Jugador WHERE correo = ?) AND fechaHora > NOW()
