Revert "Remove generated files and IDE settings; update gitignore"
This reverts commit 3c6b11086bdd2e426d2c8fc4d6a38a5fd0e5b5d4.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
-# Eclipse IDE
+# Ignorar configuración específica de Eclipse
 .classpath
 .project
 .settings/
 
-# Build / generated files
-build/
-bin/
-target/
-*.war
-
-# Temporary files
+# Archivos temporales
 *.log
 *.tmp
 
-# OS files
-.DS_Store
-Thumbs.db
+# Carpeta de salida de compilación
+bin/
+target/
+.classpath
